After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765377 - Void function 'gs_plugin_loader_open_plugin' should not return a value
Void function 'gs_plugin_loader_open_plugin' should not return a value
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other FreeBSD
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-04-21 14:11 UTC by Ting-Wei Lan
Modified: 2016-04-21 16:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
trivial: gs_plugin_loader_open_plugin should not return a value (891 bytes, patch)
2016-04-21 14:13 UTC, Ting-Wei Lan
none Details | Review

Description Ting-Wei Lan 2016-04-21 14:11:38 UTC
This error was caught by clang:

  CC       gnome_software-gs-plugin-loader-sync.o
gs-plugin-loader.c:3143:3: error: void function 'gs_plugin_loader_open_plugin' should not return a value [-Wreturn-type]
                return NULL;
                ^      ~~~~
8 warnings and 1 error generated.
Makefile:1708: recipe for target 'gnome_software-gs-plugin-loader.o' failed
Comment 1 Ting-Wei Lan 2016-04-21 14:13:44 UTC
Created attachment 326494 [details] [review]
trivial: gs_plugin_loader_open_plugin should not return a value
Comment 2 Richard Hughes 2016-04-21 16:11:52 UTC
Pushed, thanks!