trivial: gs_plugin_loader_open_plugin should not return a value

https://bugzilla.gnome.org/show_bug.cgi?id=765377
Signed-off-by: Richard Hughes <richard@hughsie.com>